--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
                     <select id="mic-select"></select>
                 </div>
 
-                <div class="form-group">
-                    <label for="speaker-select">Speaker</label>
+                <div class="settings-row">
+                    <label for="speaker-select">Speaker:</label>
                     <select id="speaker-select"></select>
+                </div>
+                <div class="settings-row" style="margin-top: 10px;">
+                    <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                        <input type="checkbox" id="debug-mode"> Debug Mode (Verbose Logs)
+                    </label>
                 </div>
 
                 <div class="form-group">
