icons in webapp

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 
                 <div class="form-group">
                     <button id="connect-streamdeck">Connect Stream Deck</button>
-                    <span id="streamdeck-status" class="status-text">No Device</span>
                 </div>
+
+                <div class="key-previews" id="key-previews" style="display: flex; gap: 10px; margin-top: 20px; justify-content: center;">
+                    <!-- Canvases will be injected here -->
+                </div>
+                <span id="streamdeck-status" class="status-text">No Device</span>
             </section>
 
             <section id="transcript-panel">
