--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <h1>Stream Deck Gemini Live</h1>
             <div id="status-indicator" class="status disconnected">Disconnected</div>
+            <a href="./src/lib/test-streamdeckv2.html">Test Stream Deck V2</a>
         </header>
 
         <main>
