--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <div class="container">
         <header>
             <h1>Stream Deck Gemini Live</h1>
-            <a href="./src/lib/test-streamdeckv2.html">Test Stream Deck V2</a>
         </header>
 
         <main>
@@ -30,6 +29,12 @@
                     <label for="speaker-select">Speaker:</label>
                     <select id="speaker-select"></select>
                 </div>
+                
+                <div class="settings-row" style="margin-top: 10px;">
+                    <label for="brightness-slider">Brightness</label>
+                    <input type="range" id="brightness-slider" min="0" max="100" value="70" style="width: 100%;">
+                </div>
+
                 <div class="settings-row" style="margin-top: 10px;">
                     <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
                         <input type="checkbox" id="debug-mode"> Debug Mode (Verbose Logs)
@@ -52,6 +57,16 @@
             </section>
         </main>
     </div>
+
+
+
+
+    <footer>
+        Tests:
+        <a href="./src/lib/test-streamdeckv2.html">Test: Stream Deck V2 lib</a>
+        <a href="./test-audio.html">Test: Audio</a>
+        
+    </footer>
 
     <script type="module" src="src/app.js"></script>
 </body>
