--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
 
     <footer>
         Tests:
-        <a href="./src/lib/test-streamdeckv2.html">Test: Stream Deck V2 lib</a>
-        <a href="./test-audio.html">Test: Audio</a>
-        
+        <ul>
+            <li><a href="./tests/test-streamdeckv2.html">Test: Stream Deck V2 lib</a></li>
+            <li><a href="./tests/test-audio.html">Test: Audio</a></li>
+        </ul>
     </footer>
 
     <script type="module" src="src/app.js"></script>
