--- a/tests/test-audio.html
+++ b/tests/test-audio.html
@@ -33,10 +33,10 @@
         const expect = chai.expect;
     </script>
 
-    <script src="tests/audio.test.js" type="module"></script>
+    <script src="audio.test.js" type="module"></script>
 
     <script type="module">
-        import { AudioManager } from './src/managers/AudioManager.js';
+        import { AudioManager } from '../src/managers/AudioManager.js';
 
         const startBtn = document.getElementById('start-mic-btn');
         const stopBtn = document.getElementById('stop-mic-btn');
