--- a/index.html
+++ b/index.html
@@ -29,9 +29,34 @@
                     <label for="speaker-select">Speaker:</label>
                     <select id="speaker-select"></select>
                 </div>
+
+                <div class="settings-row" style="margin-top: 10px;">
+                    <label for="model-select">Model</label>
+                    <select id="model-select">
+                        <option value="" disabled selected>Loading models...</option>
+                    </select>
+                </div>
+
+                <div class="settings-row" style="margin-top: 10px;">
+                    <label for="voice-select">Voice</label>
+                    <select id="voice-select">
+                        <option value="Puck">Puck</option>
+                        <option value="Charon">Charon</option>
+                        <option value="Kore">Kore</option>
+                        <option value="Fenrir">Fenrir</option>
+                        <option value="Aoede">Aoede</option>
+                    </select>
+                </div>
+
+                <div class="settings-row" style="margin-top: 10px; padding: 10px; background: rgba(255,255,255,0.05); border-radius: 6px;">
+                    <div id="token-stats" style="font-size: 0.9em; font-family: monospace;">
+                        <div>Tokens: <span id="token-count">0</span></div>
+                        <div>Cost: $<span id="cost-estimate">0.0000</span></div>
+                    </div>
+                </div>
                 
                 <div class="settings-row" style="margin-top: 10px;">
-                    <label for="brightness-slider">Brightness</label>
+                    <label for="brightness-slider">Stream Deck Brightness</label>
                     <input type="range" id="brightness-slider" min="0" max="100" value="70" style="width: 100%;">
                 </div>
 
