--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                     <select id="speaker-select"></select>
                 </div>
 
-                <div class="settings-row" style="margin-top: 10px;">
+                <!-- <div class="settings-row" style="margin-top: 10px;">
                     <label for="model-select">Model</label>
                     <select id="model-select">
                         <option value="" disabled selected>Loading models...</option>
                     </select>
-                </div>
+                </div> -->
 
                 <div class="settings-row" style="margin-top: 10px;">
                     <label for="voice-select">Voice</label>
@@ -51,7 +51,7 @@
                 <div class="settings-row" style="margin-top: 10px; padding: 10px; background: rgba(255,255,255,0.05); border-radius: 6px;">
                     <div id="token-stats" style="font-size: 0.9em; font-family: monospace;">
                         <div>Tokens: <span id="token-count">0</span></div>
-                        <div>Cost: $<span id="cost-estimate">0.0000</span></div>
+                        <div>Cost: <span id="cost-estimate">0.0000</span></div>
                     </div>
                 </div>
                 
