gemini connect button that seems wrong

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
                     </label>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" style="display: flex; gap: 10px;">
                     <button id="connect-streamdeck">Connect Stream Deck</button>
+                    <button id="connect-gemini">Connect Gemini</button>
                 </div>
 
                 <div class="key-previews" id="key-previews" style="display: flex; gap: 10px; margin-top: 20px; justify-content: center;">
