voice. discover docs. and still trying to fix the sneaky missing audio bug

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <option value="Charon">Charon</option>
                             <option value="Kore">Kore</option>
                             <option value="Fenrir">Fenrir</option>
-                            <option value="Aoede">Aoede</option>
+                            <option value="Zephyr">Zephyr</option>
                         </select>
                     </div>
 
