--- a/index.html
+++ b/index.html
@@ -40,15 +40,7 @@
                         </div>
                         <!-- Chat bubbles will be injected here -->
                     </div>
-                    <footer>
-                        <div class="stat-item">
-                            <span class="stat-label">Token Usage:</span>
-                            <span id="token-count" class="stat-value">0</span>
-                        </div>
-                        <div class="stat-item">
-                            <span class="stat-label">Estimated Cost:</span>
-                            <span id="cost-estimate" class="stat-value">$0.0000</span>
-                        </div>
+                    <footer id="token-stats">
                     </footer>
                 </div>
 
